--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -37,6 +37,7 @@
                 <div class="Container100 DispBlock gray">
 
                     <div class="Container25 TexAlRight Fs14 uobSliderLabel firstLabel">
+                        <span class="conservative_minus"><span class="ui-button-icon-center ui-icon ui-c fa fa-minus"></span></span>
                         Conservative
                     </div>
                     <div class="Container50 TexAlCenter Fs20">
@@ -49,6 +50,7 @@
                         </p:slider>
                     </div>
                     <div class="Container25 TexAlLeft Fs14 uobSliderLabel lastLabel">
+                        <span class="conservative_plus"><span class="ui-button-icon-center ui-icon ui-c fa fa-plus"></span></span>
                         Aggressive
                     </div>
                     <div class="EmptyBox5"></div>
