--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/indexNew.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/indexNew.xhtml
@@ -98,7 +98,9 @@
                                     <div class="Wid100 table">
 
                                         <!-- <h1 class="userHeadingUobDash">#{uobdash.selAccountList.get(0).firstname} #{uobdash.selAccountList.get(0).lastname}</h1> -->
-                                        <h1 class="userHeadingUobDash"><span>Goal -</span> #{uobdash.selAccountList.get(0).goal}</h1>
+                                        <h1 class="userHeadingUobDash"><span>Goal -</span> #{uobdash.selAccountList.get(0).goal}
+                                        <span class="ui-button-icon-center ui-icon ui-c fa fa-edit edit_portfolio"></span>
+                                        </h1>
                                         
                                         <!-- <div class="rowBlock">
                                             <div class="Wid50 cellBlock">Goal</div>
