--- a/Invessence/modules/web/src/main/webapp/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/index.xhtml
@@ -11,8 +11,7 @@
     <ui:define name="content">
         <div class="EmptyBox50"></div>
         <div id="layout-portlets-cover">
-            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-                 style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
+            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10 login_bg">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form id="logonForm" prependId="false">
                         <div class="EmptyBox30"></div>
