Abhang 10/04/2017 Solution for BackGround Issue

--- a/Invessence/modules/web/src/main/webapp/view-expired.xhtml
+++ b/Invessence/modules/web/src/main/webapp/view-expired.xhtml
@@ -7,8 +7,7 @@
 
     <ui:define name="content">
         <div id="layout-portlets-cover">
-            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-                 style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
+            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10 login_bg">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <div class="EmptyBox50"></div>
                     <h:graphicImage name="images/locked.png" library="spark-layout" class="MarAuto MarTop20 Wid30"/>
