--- a/Invessence/modules/web/src/main/webapp/mobilelogin.xhtml
+++ b/Invessence/modules/web/src/main/webapp/mobilelogin.xhtml
@@ -13,8 +13,7 @@
 
         <div id="layout-portlets-cover">
             <div class="EmptyBox50"></div>
-            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10 customBlockLogin"
-                 style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
+            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10 customBlockLogin login_bg">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form id="logonForm" prependId="false" styleClass="formPage">
                         <div class="EmptyBox50"></div>
