--- a/Invessence/modules/web/src/main/webapp/pages/common/signup.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/common/signup.xhtml
@@ -27,8 +27,7 @@
 
 <h:body>
     <div id="layout-portlets-cover">
-        <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
-             style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
+        <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10 login_bg">
             <div class="Container90 Fnone MarAuto TexAlCenter">
                 <h:form>
                     <div class="EmptyBox50"></div>
