--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/indexNew.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/indexNew.xhtml
@@ -136,6 +136,11 @@
                                         </div>
                                     </div>
 
+
+                                    <div class="Wid100 high_alert_dis">
+                                        Space for High Alert
+                                    </div>
+
                                     <div class="Wid100 acc_button_block">
                                         <div class="Container30 firstBtnBlck Fleft">
                                             <div class="boxBtn">
@@ -189,6 +194,8 @@
                                                 </div>
                                             </div>
                                         </div>
+
+
                                         <div class="Wid100 quickBtnBlock">
                                             <div class="Wid100">
                                                 <div class="Container30 firstBtnBlck">
