--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/overview.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/overview.xhtml
@@ -190,6 +190,13 @@
                                     </div>
                                 </div>
                             </p:tab>
+                            <p:tab title="Trade History">
+                                <div class="Container100 Responsive100">
+                                    <div class="ContainerIndent">
+                                        Trade History
+                                    </div>
+                                </div>
+                            </p:tab>
                         </p:accordionPanel>
                     </div>
                 </div>
