--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -318,44 +318,17 @@
                                 <h:outputText value=" "/>
                             </p:column>
 
-                            <p:column style="width: 50%" styleClass="Wid50 Fs12 TexAlLeft"
+                            <p:column style="width: 60%" styleClass="Wid50 Fs12 TexAlLeft"
                                       headerText="Asset">
                                 <h:outputText id="uobtasset" value="#{assetList.asset}"/>
                             </p:column>
-                            <p:column style="width: 15%"
+                            <p:column style="width: 35%"
                                       styleClass="Fs12 num-text-align TexAlRight" headerText="Allocation">
                                 <!-- ROHIT's CHANGE -->
                                 <h:outputText id="uobtalloc" value="#{assetList.userEdit}">
                                     <f:convertNumber pattern="##0%"/>
                                 </h:outputText>
                             </p:column>
-                            <p:column style="width: 15%"
-                                      styleClass="Fs12 num-text-align TexAlRight" headerText="Currency">
-                                <!-- ROHIT's CHANGE -->
-                                <h:outputText id="uobsmrycurrency" value="#{assetList.destCurrency}">
-                                </h:outputText>
-                            </p:column>
-                            <p:column style="width: 30%"
-                                      styleClass="Fs12 num-text-align TexAlRight" headerText="Value">
-                                <!-- ROHIT's CHANGE -->
-                                <h:outputText id="uobtval" value="#{assetList.value}">
-                                    <f:convertNumber pattern="##,###,###"/>
-                                </h:outputText>
-                            </p:column>
-                            <p:columnGroup type="footer">
-                                <p:row id="uobttablerow">
-                                    <p:column/>
-                                    <p:column colspan="2" styleClass="Fs12 TexAlLeft FontBold"
-                                              footerText="Total">
-                                    </p:column>
-                                    <p:column styleClass="Fs12 TexAlRight FontBold" id="uobtotcurrency"
-                                              footerText="#{uobpb.destCurrency}">
-                                    </p:column>
-                                    <p:column styleClass="Fs12 TexAlRight FontBold" id="uobttotal"
-                                              footerText="#{dataDisplayConverter.displayWithComma(uobpb.totalMoneyAllocated)}">
-                                    </p:column>
-                                </p:row>
-                            </p:columnGroup>
                         </p:dataTable>
                     </div>
                 </div>
@@ -396,7 +369,7 @@
                                 <f:facet name="header">
                                     <h:outputText value="Currency"/>
                                 </f:facet>
-                                <h:outputText id="uobbasecurrency" value="#{ticker.destCurrency}">
+                                <h:outputText id="uobbasecurrency" value="#{ticker.tradeCurrency}">
                                 </h:outputText>
                             </p:column>
 
@@ -415,11 +388,8 @@
                             <p:columnGroup type="footer">
                                 <p:row>
                                     <p:column />
-                                    <p:column colspan="2" styleClass="Fs14 TexAlLeft FontBold"
+                                    <p:column colspan="3" styleClass="Fs14 TexAlLeft FontBold"
                                               footerText="Total">
-                                    </p:column>
-                                    <p:column styleClass="Fs14 TexAlRight FontBold" id="uobttotbycur"
-                                              footerText="#{uobpb.destCurrency}">
                                     </p:column>
                                     <p:column styleClass="Fs14 TexAlRight FontBold" id="uobttot2"
                                               footerText="#{dataDisplayConverter.displayWithComma(uobpb.totalMoneyAllocated)}">
