--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/debt.xhtml
@@ -59,7 +59,7 @@
             <div class="uobBoldText">Total Expenses</div>
             <div class="uobSubText">(Include your annual cost for household expenses. For example family expenses, children’s tuition, mortgage, holiday travel and any other living cost)</div>
         </div>
-        <p:inputNumber value="#{uobpb.accountFinancials.totalExpense}" placeholder="$" id="uobinputtexp"
+        <p:inputNumber value="#{uobpb.accountFinancials.totalExpense}"  id="uobinputtexp"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
         </p:inputNumber>
@@ -69,7 +69,7 @@
             <div class="uobBoldText">Total Debt</div>
             <div class="uobSubText">(Include your car payments, credit card bills and any other personal debt obligations.)</div>
         </div>
-        <p:inputNumber value="#{uobpb.accountFinancials.totalDebt}" placeholder="$" id="uobinputtdebt"
+        <p:inputNumber value="#{uobpb.accountFinancials.totalDebt}"   id="uobinputtdebt"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
         </p:inputNumber>
