--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/income.xhtml
@@ -38,7 +38,7 @@
             <div class="uobSubText"></div>
         </div>
         <p:inputNumber value="#{uobpb.accountFinancials.householdwages}" id="uobinputannsal"
-                       styleClass="Wid100 uob_number_field" maxlength="15" placeholder="$"
+                       styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
         </p:inputNumber>
 
@@ -47,7 +47,7 @@
             <div class="uobBoldText">Liquid Asset</div>
             <div class="uobSubText">(Cash/Savings Account, etc.)</div>
         </div>
-        <p:inputNumber value="#{uobpb.accountFinancials.liquidnetworth}" placeholder="$" id="uobinputlasset"
+        <p:inputNumber value="#{uobpb.accountFinancials.liquidnetworth}"  id="uobinputlasset"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
         </p:inputNumber>
@@ -58,7 +58,7 @@
             <div class="uobBoldText">Other Investments</div>
             <div class="uobSubText">(Stocks, Bonds, CPF)</div>
         </div>
-        <p:inputNumber value="#{uobpb.accountFinancials.investment}" placeholder="$" id="uobinputothrinvest"
+        <p:inputNumber value="#{uobpb.accountFinancials.investment}"  id="uobinputothrinvest"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
         </p:inputNumber>
@@ -68,7 +68,7 @@
             <div class="uobBoldText">Investment Properties</div>
             <div class="uobSubText">(Value of property less the mortgage)</div>
         </div>
-        <p:inputNumber value="#{uobpb.accountFinancials.equityOtherProperties}" placeholder="$" id="uobinputinvestprop"
+        <p:inputNumber value="#{uobpb.accountFinancials.equityOtherProperties}"  id="uobinputinvestprop"
                        styleClass="Wid100 uob_number_field" maxlength="15"
                        decimalPlaces="0" symbol="$">
         </p:inputNumber>
