--- a/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflownew.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/assetworkflownew.xhtml
@@ -213,18 +213,18 @@
                                             <div class="uploadbuttons">
                                                 <p:fileUpload fileUploadListener="#{AssetManagementUpd.handleExistingFileUpload}" mode="advanced"
                                                               dragDropSupport="false"
-                                                              update="updExtForm:tableArea,idUpdMessage" sizeLimit="100000" fileLimit="10"
+                                                              update="@form" sizeLimit="100000" fileLimit="10"
                                                               allowTypes="/(\.|\/)(csv)$/"/>
                                             </div>
                                         </div>
 
-                                        <!--<p:growl id="messages" showDetail="true"/>-->
+                                        <div class="EmptyBox30"></div>
                                         <div class="uploadtable">
                                             <p:dataTable var="filelst" value="#{AssetManagementUpd.lstExtFileList}" id="tableArea">
-                                                <p:column headerText="File Name">
+                                                <p:column headerText="File Name" style="text-align: left;">
                                                     <h:outputText value="#{filelst.fileName}"/>
                                                 </p:column>
-                                                <p:column headerText="File Type">
+                                                <p:column headerText="File Type" style="text-align: left;">
                                                     <h:outputText value="#{filelst.fileType}"/>
                                                 </p:column>
                                             </p:dataTable>
@@ -250,17 +250,19 @@
                                 </p:panel>
                                 <p:panel rendered="#{AssetManagementUpd.vldFailureStatus}"
                                          style="border: 0px; background: transparent; text-align: left;" styleClass="deleteAdvError">
-                                    <h:outputText styleClass="errorText"
-                                                  value="Files validation failed " escape="false"/>
-                                    <p:commandLink id="pwdFail"
-                                                   styleClass="errorText"
-                                                     value="details" process="@none"/>
-                                    <p:overlayPanel id="helpPanel" for="pwdFail" hideEffect="fade" dynamic="false"
-                                                    showCloseIcon="true"
-                                                    style="width:300px">
+                                    <span class="error_dtl_block">
                                         <h:outputText styleClass="errorText"
-                                                      value="#{AssetManagementUpd.validationError}" escape="false"/>
-                                    </p:overlayPanel>
+                                                      value="Files validation failed " escape="false"/>
+                                        <p:commandLink id="pwdFail"
+                                                       styleClass="errorText"
+                                                         value="details" process="@none"/>
+                                        <p:overlayPanel id="helpPanel" for="pwdFail" hideEffect="fade" dynamic="false"
+                                                        showCloseIcon="true"
+                                                        style="width:300px">
+                                            <h:outputText styleClass="errorText"
+                                                          value="#{AssetManagementUpd.validationError}" escape="false"/>
+                                        </p:overlayPanel>
+                                    </span>
                                     <div class="EmptyBox30"></div>
                                 </p:panel>
 
@@ -274,8 +276,8 @@
                                 <!--</p:panel>-->
                                 <p:outputLabel for="model_validate" value="">
                                 <span class="span_model_nm">Model Name </span>
-                                    <p:selectOneMenu id="model_validate" value="#{AssetManagementUpd.updModelId}" style="width:180px">
-                                        <p:ajax listener="#{AssetManagementUpd.onModelChange}" update="templst_validate,rvwMainFrm:model_review"
+                                    <p:selectOneMenu id="model_validate" value="#{AssetManagementUpd.vldModelId}" style="width:180px">
+                                        <p:ajax listener="#{AssetManagementUpd.onvldModelChange}" update="templst_validate,rvwMainFrm:model_review"
                                                 event="change"/>
                                         <f:selectItem itemLabel="Select Model" itemValue="0" noSelectionOption="true"/>
                                         <f:selectItem itemLabel="Predefined" itemValue="Predefined"/>
@@ -284,8 +286,8 @@
                                 </p:outputLabel>
                                 <p:outputLabel for="templst_validate" value="">
                                 <span class="span_model_nm">Template Name </span>
-                                    <p:selectOneMenu id="templst_validate" value="#{AssetManagementUpd.templateID}" style="width:180px">
-                                        <p:ajax listener="#{AssetManagementUpd.onTemplateChange}"
+                                    <p:selectOneMenu id="templst_validate" value="#{AssetManagementUpd.vldTempId}" style="width:180px">
+                                        <p:ajax listener="#{AssetManagementUpd.onValTempChange}"
                                                 update="validateForm:tableArea_validate,validateForm:assetValidate"
                                                 event="change"/>
                                         <f:selectItem itemLabel="Select Template" itemValue="0" noSelectionOption="true"/>
@@ -303,10 +305,10 @@
                                  <div class="EmptyBox30"></div>
                                 <div class="validtable">
                                     <p:dataTable var="filelst_validate" value="#{AssetManagementUpd.lstExtFileList}" id="tableArea_validate">
-                                        <p:column headerText="File Name">
+                                        <p:column headerText="File Name" style="text-align: left;">
                                             <h:outputText value="#{filelst_validate.fileName}"/>
                                         </p:column>
-                                        <p:column headerText="File Type">
+                                        <p:column headerText="File Type" style="text-align: left;">
                                             <h:outputText value="#{filelst_validate.fileType}"/>
                                         </p:column>
                                     </p:dataTable>
